--- a/index.html
+++ b/index.html
@@ -1,29 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2=family=Roboto:wght@400;600&display=swap">
-        <link rel="stylesheet" href="css/style.css">
-        <title>Fluentify by Boolean</title>
-    </head>
-    <body>
-        <!-- testata pagina -->
-        <header>
+        <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="preconnect" href="https://fonts.gstatic.com">
+            <link href="https://fonts.googleapis.com/css2=family=Roboto:wght@400;600&display=swap">
+            <link rel="stylesheet" href="css/style.css">
+            <title>Fluentify by Boolean</title>
+        </head>
+        <body>
+            <!-- testata pagina -->
+            <header>
+                <div class="container">
+                    <!-- header nav -->
+                    <div class="header-nav clearfix">
+                        <div class="header-logo float-left">
+                            <img src="img/logo.svg" alt="logo azienda">
+                        </div>
+                        <nav class="nav-left float-left">
+                            <ul class="list-inline">
+                                <li>
+                                    <a href="#">il metodo</a>
+                                </li>
+                                <li>
+                                    <a href="#">la tecnologia</a>
+                                </li>
+                                <li>
+                                    <a href="#">real-life english</a>
+                                </li>
+                                <li>
+                                    <a href="#">soluzioni aziendali</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </header>
+            <!-- /testata della pagina -->
 
-        </header>
-        <!-- /testata della pagina -->
+            <!-- corpo della pagina -->
+            <main>
 
-        <!-- corpo della pagina -->
-        <main>
+            </main>
+            <!-- /corpo della pagina -->
 
-        </main>
-        <!-- /corpo della pagina -->
+            <footer>
 
-        <footer>
-
-        </footer>
-    </body>
+            </footer>
+        </body>
 </html>
