refactoring header-nav

--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
                                 </li>
                             </ul>
                         </nav>
+                        <div class="nav-right float-right">
+                            <ul class="list-inline float-right">
+                                <li>
+                                    <a href="#">diventa un tutor</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="btn btn-blue">login</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="btn btn-green">struttura un piano</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </header>
