add jumbotron e header completato

--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
                             </ul>
                         </div>
                     </div>
+                    <!-- /header nav -->
+
+                    <!-- jumbotron -->
+                    <div class="jumbotron w-50">
+                        <div class="jumbotron-text">
+                            <h1>Scegli l'inglese studiato per i professionisti</h1>
+                            <a href="#" class="btn btn-green btn-large">Struttura un piano</a>
+                        </div>
+                    </div>
                 </div>
+
             </header>
             <!-- /testata della pagina -->
 
