--- a/index.html
+++ b/index.html
@@ -57,14 +57,19 @@
                             <a href="#" class="btn btn-green btn-large">Struttura un piano</a>
                         </div>
                     </div>
+                    <!-- /jumbotron -->
                 </div>
-
             </header>
             <!-- /testata della pagina -->
 
             <!-- corpo della pagina -->
             <main>
-
+                <div class="container">
+                    <section class="intro">
+                        <h3>Le scuole di lingua tradizionali non sono efficaci</h3>
+                        <p>Solo un corso incentrato sulla Fluency pu portare ad una soluzione definitiva concreta.</p>
+                    </section>
+                </div>
             </main>
             <!-- /corpo della pagina -->
 
