--- a/index.html
+++ b/index.html
@@ -64,12 +64,30 @@
 
             <!-- corpo della pagina -->
             <main>
-                <div class="container">
-                    <section class="intro">
-                        <h3>Le scuole di lingua tradizionali non sono efficaci</h3>
-                        <p>Solo un corso incentrato sulla Fluency pu portare ad una soluzione definitiva concreta.</p>
+                    <!-- sezione intro -->
+                    <section class="grey-banner">
+                        <div class="text">
+                            <h4>Le scuole di lingua tradizionali non sono efficaci</h3>
+                            <p class="description-text">Solo un corso incentrato sulla Fluency pu portare ad una soluzione definitiva concreta.</p>
+                        </div>
                     </section>
-                </div>
+                    <!-- /sezione intro -->
+
+                    <!-- sezione scelta -->
+                    <section class="container">
+                        <div class="upper-section clearfix">
+                            <div class="box float-left">
+                                <img src="img/profile.svg" alt="">
+                            </div>
+                            <div class="box float-left">
+
+                            </div>
+                            <div class="box float-right">
+
+                            </div>
+                        </div>
+                    </section>
+                    <!-- /sezione scelta -->
             </main>
             <!-- /corpo della pagina -->
 
