Add second layer

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
                     <!-- sezione scelta -->
                     <section class="container">
+                        <!-- Sezione superiore -->
                         <div class="upper-section clearfix">
                             <div class="box float-left">
                                 <img src="img/profile.svg" class="icon" alt="">
@@ -101,6 +102,19 @@
                                 </p>
                             </div>
                             <hr>
+                        </div>
+                        <!-- /Sezione superiore -->
+
+                        <!-- Sezione inferiore -->
+                        <div class="lower-section clearfix">
+                            <div class="box float-left">
+                                <img src="img/mountain.svg" id="img-sx" alt="">
+                            </div>
+                            <div class="box float-right">
+                                <h2>Scopri il tuo livello iniziale e struttura un piano personalizzato</h2>
+                                <p class="description-text">L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.</p>
+                                <a href="#">Scopri il nostro test di placement</a>
+                            </div>
                         </div>
                     </section>
                     <!-- /sezione scelta -->
