--- a/index.html
+++ b/index.html
@@ -121,8 +121,16 @@
             </main>
             <!-- /corpo della pagina -->
 
-            <footer>
-
+            <footer class="grey-banner">
+                <div class="container clearfix">
+                    <a href="#" class="float-left">Struttura un piano</a>
+                    <div class="btn btn-green btn-large float-right">
+                        <a href="#">Visualizza il tuo piano</a>
+                    </div>
+                    <div class="description-text float right">
+                        <span>Sono:</span>
+                    </div>
+                </div>
             </footer>
         </body>
 </html>
