Refactoring, esercizio completato

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                                     Controlla i tuoi progressi con i dati elaborati dal nostro sistema. Hai il pieno controllo su miglioramenti e obiettivi raggiunti.
                                 </p>
                             </div>
-                            <hr>
                         </div>
+                        <hr>
                         <!-- /Sezione superiore -->
 
                         <!-- Sezione inferiore -->
@@ -121,16 +121,27 @@
             </main>
             <!-- /corpo della pagina -->
 
+            <!-- footer della pagina -->
             <footer class="grey-banner">
                 <div class="container clearfix">
-                    <a href="#" class="float-left">Struttura un piano</a>
-                    <div class="btn btn-green btn-large float-right">
-                        <a href="#">Visualizza il tuo piano</a>
+                    <div class="float-left">
+                        <a href="#" id="piano_link">Struttura un piano</a>
                     </div>
-                    <div class="description-text float right">
-                        <span>Sono:</span>
+                    <div class="boxe float-right">
+                        <span class="description-text">Sono:</span>                      
+                        <span id="select" class="description-text">Seleziona <span id="arrow">&#9660;</span></span>                        
+                        <a href="#" class="btn btn-green btn-large">Visualizza il tuo piano</a>
                     </div>
                 </div>
             </footer>
+            <!-- /footer della pagina -->
+
+            <!-- linguetta help -->
+            <div id="linguetta">
+                <div class="btn btn-green">
+                    <a href="#" id="help_text">HELP</a>
+                </div>
+            </div>
+            <!-- /linguetta help -->
         </body>
 </html>
